<resources>
    <string name="app_name">Utility</string>

    <!--    custom string-->

    <string name="login_txt">Log in </string>
    <string name="sign_up_txt">Sign up</string>
    <string name="sign_in_txt">Sign in </string>
    <string name="sign_in_wth_google_txt">Sign in with google</string>
    <string name="email_hint_txt">Enter email address </string>
    <string name="password_hint_txt">Enter password</string>

    <string name="forgot_pwd_txt">Forgot password ? </string>
    <string name="already_hve_n_account_txt">Already have an account</string>

    <string name="both_field_error_txt">Field can\'t be empty</string>
    <string name="password_weak_txt">Password too weak</string>
    <string name="password_error_txt">Password can\'t be empty</string>
    <string name="email_error_txt_second">Email doesn\'t matches with email pattern</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    fragment first-->

    <string name="agenda_txt">AGENDA</string>
    <string name="goal_counter_txt">0/3</string>
    <string name="add_something_hint_txt">Add Something else</string>
    <string name="journal_txt">EVENT</string>
    <string name="what_mind_txt">What\'s on your mind?</string>
    <string name="goal_one_txt">Walk 3,000 steps</string>


    <!--    frgment second-->

    <string name="do_today_text_title">Do Today</string>
    <string name="add_task_text_title">Add a task for today</string>
    <string name="do_someday_text_title">Do Someday</string>

    <!--    bottom navigation menu string-->

    <string name="nav_home_txt">Home</string>
    <string name="nav_goal_txt">Goals</string>
    <string name="nav_insights_txt">Insights</string>
    <string name="nav_resources_txt">Resources</string>
    <string name="nav_search_txt">Search</string>


    <!--    frgament string-->
    <string name="home_fragment_text">Home </string>
    <string name="goal_fragment_text">Goal </string>
    <string name="insights_fragment_text">Insights </string>
    <string name="resources_fragment_text">Resources </string>
    <string name="accept_goal_txt">ACCEPT GOAL</string>

    <!--    goal activity string-->
    <string name="starts_txt">Starts:</string>
    <string name="today_txt">Today</string>
    <string name="month_txt">3 months</string>
    <string name="add_event_txt">ADD EVENT </string>
    <string name="event_reschedule_txt">RESCHEDULE</string>

<!--    insight fragment-->
    <string name="completion_rate_title_txt">Completition Rate of the Week</string>
    <string name="total_percentage_txt">0%</string>
    <string name="increment_percentage_txt">+0%</string>
    <string name="completed_txt">Completed</string>
    <string name="Undone_txt">Undone</string>

<!--    recently completed-->
    <string name="recently_completed_title_txt">Recently Completed</string>
    <string name="delete_title_txt">Delete account</string>
    <string name="delete_description_txt">Deleting your account is permanent. All your data will be wiped out immediately and you won\'t be able to get it back.</string>

<!--    priority title -->
    <string name="priority_one_txt">Priority 1</string>
    <string name="priority_two_txt">Priority 2</string>
    <string name="priority_three_txt">Priority 3</string>
    <string name="priority_four_txt">Priority 4</string>

<!--    inbox item string-->
    <string name="title_txt">Title</string>
    <string name="subtask_title">Subtask</string>



</resources>
