<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/toolbar_account"
        android:title="@string/nav_home_txt"

        android:icon="@drawable/account_icon"
        app:showAsAction="never">

    </item>

    <item android:id="@+id/toolbar_goals"
        android:title="@string/nav_goal_txt"
        android:icon="@drawable/camera_icon"
        app:showAsAction="never">

    </item>

    <item android:id="@+id/toolbar_insights"
        android:title="@string/nav_insights_txt"
        android:icon="@drawable/insights_icon"
        app:showAsAction="never">

    </item>


    <item android:id="@+id/toolbar_resources"
        android:title="@string/nav_resources_txt"
        android:icon="@drawable/camera_icon"
        app:showAsAction="never">

    </item>

    <item android:id="@+id/toolbar_favorite"
        android:title="@string/nav_resources_txt"
        android:icon="@drawable/favorite_icon"
        app:showAsAction="always">

    </item>


</menu>