<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/main_priorityLayoutContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <!--        1st layout for imageView-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/priority_icon"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        2nd layout for priority title -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priority_one_titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_one_txt"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <!--        1st layout for imageView-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/priority_icon"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        2nd layout for priority title -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priority_two_titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_two_txt"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

    <!--    3rd layout for 3rd priority-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--        1st layout for imageView-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/priority_icon"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        2nd layout for priority title -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priority_three_titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_three_txt"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

    <!--    4th layout for 4th priority-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <!--        1st layout for imageView-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/priority_icon"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        2nd layout for priority title -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priority_four_titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_four_txt"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>



</androidx.appcompat.widget.LinearLayoutCompat>