<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8FF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="View.Fragment.CollapsingToolbarGoalActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/get_started_image_background"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleGravity="center_horizontal"
            app:title="Save Money Monthly"
            app:contentScrim="@color/button_color"
            app:layout_scrollFlags="exitUntilCollapsed|scroll|snap">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/collapsing_toolbar_layout_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:text="@string/hello_blank_fragment"
                android:textSize="21sp"
                android:gravity="center"
                android:textColor="#ffff"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/clear_icon"
                app:menu="@menu/toolbar_menu"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accept_goal_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:layout_marginTop="210dp"
                android:layout_marginStart="90dp"
                android:text="@string/accept_goal_txt"
                android:textColor="@android:color/white"
                android:layout_marginEnd="80dp"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="14dp">

            <!--            1st linear layout for startTextView and date txtView-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starts_txt"
                    android:textSize="19sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/today_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_txt"
                    android:textSize="19sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/button_color"
                    android:textStyle="bold"/>


                <!--              for calendar and 4days text-->

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/calendar_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/date_range_icon"
                    android:layout_marginStart="160dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_range_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4 Days"
                    android:textSize="19sp"
                    android:layout_marginStart="15dp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--            2nd linear layout for goal description-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goal_title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="How to create a financial buffer without feeling cheap."
                    android:textStyle="normal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--            3rd layout for goal description textView-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goal_description_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxEms="10"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goal_description_textViewOne"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxEms="10"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>





        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
